force-app/main/default/objects/InitiativeEvent__c/InitiativeEvent__c.object-meta.xml
<CustomObject>
    <label>Initiative Event</label>
    <nameField>
        <label>InitiativeEvent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiative Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>