force-app/main/default/objects/InitiativeEvent__c/fields/GoogleCalendarId__c.field-meta.xml
<CustomField>
    <fullName>GoogleCalendarId__c</fullName>
    <label>Google Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>