force-app/main/default/objects/InitiativeEvent__c/fields/GoogleEventId__c.field-meta.xml
<CustomField>
    <fullName>GoogleEventId__c</fullName>
    <label>GoogleEventId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>