force-app/main/default/objects/InitiativeEvent__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <label>Initiative</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>Initiative Events</relationshipLabel>
    <relationshipName>Initiative_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>