force-app/main/default/objects/InitiativeEvent__c/fields/MaxSeats__c.field-meta.xml
<CustomField>
    <fullName>MaxSeats__c</fullName>
    <label>Max Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>