force-app/main/default/objects/InitiativeEvent__c/fields/NoShow__c.field-meta.xml
<CustomField>
    <fullName>NoShow__c</fullName>
    <formula>Seats__c -  Attended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Show</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>